Bug 437288 - After a color adjustment the filter mask layer is inverted. (black)
Summary: After a color adjustment the filter mask layer is inverted. (black)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-05-18 05:56 UTC by RamonMiranda
Modified: 2021-07-21 06:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RamonMiranda 2021-05-18 05:56:02 UTC
SUMMARY
The filter mask layer is inverted. (black)

STEPS TO REPRODUCE
1. Paint something in an empty layer
2. Go to filter/adjust/color adjutment curves
3. modify the curve and Create filter mask

OBSERVED RESULT
It creates the filter mask but inverted. Is the same in Win 10.

EXPECTED RESULT
i expect to see the adjustment i have done in the curve.

SOFTWARE/OS VERSIONS
Windows: Win 10 
macOS: 
Linux/KDE Plasma: Kubuntu 20.04
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
I have tested also the filter layer and works ok.
Comment 1 Halla Rempt 2021-05-18 08:21:27 UTC
Which version of krita is this?
Comment 2 Bug Janitor Service 2021-06-02 04:33:37 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 RamonMiranda 2021-06-02 07:10:42 UTC
(In reply to Halla Rempt from comment #1)
> Which version of krita is this?

In the Krita Next releases. krita-nightly-x64-5.0.0-prealpha-ef98c1520e
Comment 4 Bug Janitor Service 2021-06-03 04:33:37 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 5 Ahab Greybeard 2021-06-06 20:33:19 UTC
I can't reproduce that with the Jun 06 5.0.0-prealpha (git 6a4ed9a) on Debian 10.
The filter mask is white and the adjustment effect is fully visible.
Comment 6 RamonMiranda 2021-06-07 08:22:38 UTC
I am testing again in Kubuntu 20.04 with Krita next git-6a4ed9a and is still the same. Is working ok if i create a filter mask and then look for select color adjustment curves. But are you using the steps to reproduce it?, if you select the filter by menu then it creates an inverted mask.  i can record a minivideo if it is needed. And Thanks for your time too.
Comment 7 Ahab Greybeard 2021-06-07 09:50:17 UTC
Hi Ramon, I followed the steps exactly and did not see a problem, but that was last night when I was using my usual 1024 x 1024 canvas size.

Today, by chance, I used a 2028 x 2048 canvas and I do see that problem happen.

At 1350 x 1350, there is no problem.
At 1400 x 1400, the problem starts for larger images.
I haven't tried other aspect ratios.

Note: I didn't need to make any modification to the curve. All I needed to do was press Create Filter Mask.

Setting to Confirmed
Comment 8 Ahab Greybeard 2021-06-07 09:52:57 UTC
This does not happen with the 4.4.3 appimage hence regression.
Comment 9 RamonMiranda 2021-06-07 10:06:57 UTC
Thanks Ahab, i usually test with Dina4 300dpi 8bit srgb as starting point. So is another tip for my tests. Thanks. RM mental note: Test also in lowres images :)
Comment 10 Dmitry Kazakov 2021-07-21 05:38:56 UTC
The problem is in the fact that the filter mask is created while Instant Preview mode is still active. In Krita 5.0 Instant Preview mode is forced for filters by default.
Comment 11 Dmitry Kazakov 2021-07-21 06:04:32 UTC
Git commit c62ee0b25647d3e61181c3dafff6b5b398f1f3a9 by Dmitry Kazakov.
Committed on 21/07/2021 at 06:04.
Pushed by dkazakov into branch 'master'.

Fix "Create Filter Mask" option to work in Instant Preview mode

When filter dialog works in instant preview mode, we should wait
until the stroke is fully cancelled before creating a mask, otherwise
the mask will be initialized in IP mode only.

M  +6    -1    libs/ui/dialogs/kis_dlg_filter.cpp

https://invent.kde.org/graphics/krita/commit/c62ee0b25647d3e61181c3dafff6b5b398f1f3a9