Fix "Create Filter Mask" option to work in Instant Preview mode

When filter dialog works in instant preview mode, we should wait
until the stroke is fully cancelled before creating a mask, otherwise
the mask will be initialized in IP mode only.

BUG:437288